build(build): Add release, install, and deploy tasks with clojars badge
Add clojars version badge to README.  Rewrite build script for
one-step jar, install, and release tasks, integrating deps-deploy
and improved class/resource placement.  Update deps.edn for build
and deploy dependencies.  Add serialVersionUID to
JsonParseException.  Update docs to clarify usage and build
workflow.